<resources>
    <string name="app_name">Livraria S&amp;B</string>
    <string name="entrar">Entrar</string>
    <string name="nome_completo">Nome completo</string>
    <string name="livraria_santos_e_bezerra">Livraria Santos e Bezerra</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="n_mero_do_cpf">Número do CPF</string>
    <string name="apenas_d_gitos">Apenas dígitos</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="senha_do_usu_rio">Senha do usuário</string>
    <string name="salvar">Salvar</string>
    <string name="cpf">CPF</string>
    <string name="nova_senha">Nova senha</string>
    <string name="redefinir">Redefinir</string>
    <string name="t_tulo">Título</string>
    <string name="t_tulo_do_livro">Título do livro</string>
    <string name="autor">Autor</string>
    <string name="nome_do_autor">Nome do autor</string>
    <string name="editora">Editora</string>
    <string name="nome_da_editora">Nome da editora</string>
    <string name="ano">Ano</string>
    <string name="ano_de_lan_amento">Ano de lançamento</string>
    <string name="isbn">ISBN</string>
    <string name="descri_o">Descrição</string>
    <string name="breve_descri_o_do_livro">Breve descrição do livro</string>
    <string name="imagem">Imagem</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="criar_novo_usu_rio">Criar novo usuário</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="excluir">Excluir</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="as_senhas_n_o_coincidem">As senhas não coincidem</string>
    <string name="senha_redefinida_com_sucesso">Senha redefinida com sucesso</string>
    <string name="n_o_foi_poss_vel_redefinir_a_senha">Não foi possível redefinir a senha</string>
    <string name="livro_atualiado_com_sucesso">Livro atualiado com sucesso!</string>
    <string name="n_o_foi_poss_vel_atualizar_o_livro">Não foi possível atualizar o livro!</string>
    <string name="livro_n_o_encontrado">Livro não encontrado!</string>
    <string name="digite_o_isbn">Digite o ISBN!</string>
    <string name="buscando_url_da_imagem">Buscando url da imagem...</string>
    <string name="url_da_imagem_encontrada">Url da imagem encontrada!</string>
    <string name="url_da_imagem_n_o_encontrada">Url da imagem não encontrada!</string>
    <string name="livro_cadastrado_com_sucesso">Livro cadastrado com sucesso!</string>
    <string name="n_o_foi_poss_vel_cadastrar_o_livro">Não foi possível cadastrar o livro!</string>
    <string name="usu_rio_cadastrado_com_sucesso">Usuário cadastrado com sucesso</string>
    <string name="n_o_foi_poss_vel_cadastrar_esse_usu_rio">Não foi possível cadastrar esse usuário</string>
    <string name="livro_exclu_do_com_sucesso">Livro excluído com sucesso</string>
    <string name="n_o_foi_poss_vel_excluir_o_livro">Não foi possível excluir o livro</string>
    <string name="usu_rio_ou_senha_incorretos">Usuário ou senha incorretos</string>
</resources>