<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TelaAlteracao">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/livraria_santos_e_bezerra"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:text="@string/isbn"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            tools:context=".TelaAlteracao">

            <EditText
                android:id="@+id/et_isbn"
                style="@style/Edit_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Número do ISBN"
                android:inputType="text"
                android:maxLength="13" />

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button">

                <ImageView
                    android:id="@+id/img_buscarDetalhes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_search" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_detalhesOcultos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/t_tulo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_titulo"
                style="@style/Edit_Text"
                android:hint="@string/t_tulo_do_livro"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/autor"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_autor"
                style="@style/Edit_Text"
                android:hint="@string/nome_do_autor"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_editora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/editora"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_editora"
                style="@style/Edit_Text"
                android:hint="@string/nome_da_editora"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_ano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/ano"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_ano"
                style="@style/Edit_Text"
                android:hint="@string/ano_de_lan_amento"
                android:inputType="text" />


            <TextView
                android:id="@+id/tv_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/descri_o"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_descricao"
                style="@style/Edit_Text"
                android:hint="@string/breve_descri_o_do_livro"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_imagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/imagem"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_url"
                style="@style/Edit_Text"
                android:hint="@string/url_da_imagem"
                android:inputType="text" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/button">

            <TextView
                android:id="@+id/tv_alterarLivro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/salvar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>