<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TelaExclusao">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/livraria_santos_e_bezerra"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:text="@string/isbn"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            tools:context=".TelaExclusao">

            <EditText
                android:id="@+id/et_isbn"
                style="@style/Edit_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Número do ISBN"
                android:inputType="text"
                android:maxLength="13" />

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button">

                <ImageView
                    android:id="@+id/img_buscarLivro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_search" />

            </FrameLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/constraintLayoutExclusao"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_livro"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:maxLength="30"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_livro"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Um estudo em vermelho" />

            <TextView
                android:id="@+id/tv_editora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_livro"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
                tools:text="Editora: L&amp;PM" />

            <TextView
                android:id="@+id/tv_ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_livro"
                app:layout_constraintTop_toBottomOf="@+id/tv_editora"
                tools:text="Ano: 1887" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/button">

            <TextView
                android:id="@+id/tv_excluirLivro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/excluir"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>